# BilibiliManga

./: .gitignore  AGENT_RULES.md  APP_FLOW.md  HANDOVER.md  IMPLEMENTATION_PLAN.md  MILESTONE_COOKIE_PERSISTENCE.md  PRD.md  PROGRESS_95_PERCENT.md  QUICKSTART.md  README.md  SECURITY.md  SUMMARY.md  TECH_STACK.md  TEST_PLAN.md  UI_REDESIGN_COMPLETE.md  UPDATE_2026-07-03.md  index.html  package-lock.json  package.json  progress.md  test-api.ps1  test-cookie-quick.bat  test-cookie.txt.example  vite.config.ts
docs/: COOKIE_VERIFICATION_GUIDE.md  NEXT_STEPS.md  api-boundaries.md  api-research-plan.md  biliplus-reference.md  downloader-reference.md  github-workflow.md  interface-research.md  release.md
release-package/: ACCEPTANCE_CHECKLIST.md  README.txt  RELEASE_NOTES.md  USER_GUIDE.md
src/: App.tsx  main.tsx  sampleData.ts  styles-manga.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  cookies.rs  lib.rs  main.rs  security.rs  storage.rs
src/bridge/: tauriBridge.ts
src/components/: ApiDiagnosticsPanel.tsx  ApiTestPanel.tsx  LoginPage.tsx  MangaDetailPage.tsx  MangaHistoryPage.tsx  MangaHomePage.tsx  MangaPurchasedPage.tsx  MangaReaderPage.tsx  PurchasedComicsPage.tsx  SearchResultsPage.tsx
src/domain/: apiAdapter.test.ts  apiAdapter.ts  apiDiagnostics.test.ts  apiDiagnostics.ts  apiErrors.test.ts  apiErrors.ts  auth.test.ts  auth.ts  bookshelf.test.ts  bookshelf.ts  browsingPolicy.test.ts  browsingPolicy.ts  cache.test.ts  cache.ts  diagnosticReport.test.ts  diagnosticReport.ts  history.ts  (+11 more)
