[package]
name = "bilimanga"
version = "0.1.0"
description = "BiliManga Windows desktop MVP"
authors = ["Vantalens"]
edition = "2021"
license = "UNLICENSED"

[lib]
name = "bilimanga_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-updater = "2.10.1"
base64 = "0.22.1"
getrandom = "0.3.4"
keyring = "4.1.2"


[dev-dependencies]
tempfile = "3.27.0"
